plang/testing/logs/false-incorrect/11/program11.p.p
f :- (m; ciwT undP); (vTbMU sC t (dl voCrH)); (nB (Bqb)), u5r D FE7S3, rf LD; dS1D Ps (pFePO), (l BO (gqYyZ h2m) (I)), (yh7); (m P (Ak3fo), gURb).
cUbi dZq :- i; ((gWx (LD) (Up) tdlM (UWkA), qt); ls (wuMgX) (mSXTU F Qx), rI, w O aQtrE (xCDLE (M7) (Ps7wg))).


p2 (VS) pJ ny1 :- c3 (an8c) GiA p5 (XUlh).


apf4B pLdxQ.

f6IDX.


fLla.
e7WI (dK) m (hi (oSjDr)) :- cn (SoxH) Jejr (PI) (x6 Z sB (ie5EO (BNJ6) t k5 (WJuNP))).

qgIrd (QeU) (vu r) s68w :- ((((nEH W5de (FP) q8V))); (l (UH) X (R); m3ko l5 g2); (iF1AM CB2U8 Mw (qF (en (pp aA6q) (vINu c (k (P9JH))) (P4H) xImw) (dArg (IMJab) (fQc9O Ol))) a, rrk)).
n :- (yxE uk).


kfF (B) (xlvq F78B s FM) AeE Hs1 :- (((tWO g (Cb), uq0T A (soP) (T) (aZd (d (bjqwe KTz) (qxvwa (d o1nK) G)) (xA JU (h) (PuK))); (n8C FEe3 (Vky) (PQdzV))))).

fOTM (J) IVo DjNb0 Qw9 :- ((zG)), (vv6OB); yR2 (Nu) (EOJr), iLW U C5Yc, uI5LB j (I0) b; a1o (vzeR (i3LRH) (r (ZF))) g2 (cRvDc hKbL aclYK y), c4ZGk (bP5IN) fIRvH (IaA74); dqI (w (AJRNY) wTfO J) Oq auv, q (O) G kK Wnx.
dUU sRkp.


l i5A TR T.


zfH (s7AS I6 (eR2E)) S (M).
oG1 Cka.

? ((xBj7 gc (jfq os w0) lseon B; cDgwA h1I hpT CNnn (Zvf4R))).


